--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     rev: v3.3.1
     hooks:
       - id: pylint
-        args: ["--disable=C0114, C0115, C0116, E0401, R0903, E0611, C0103"]
+        args: ["--disable=C0114, C0115, C0116, E0401, R0903, E0611, R1705, R1722, C0103"]
 
 
   - repo: https://github.com/psf/black
